--- a/_sass/irlpodcast.scss
+++ b/_sass/irlpodcast.scss
@@ -162,14 +162,22 @@ ol {
     }
 
     a {
-        background: #fff;
-        border: 1px solid #cacaca;
-        border-radius: 30px;
+        align-items: center;
+        background: #efefef;
+        border-radius: 10px;
         box-sizing: border-box;
-        display: inline-block;
-        padding: 10px 0;
+        display: flex;
+        height: 46px;
+        justify-content: center;
         text-align: center;
         width: 160px;
+
+        span {
+            background: #fff;
+            border-radius: 8px;
+            border: 1px solid #a2a3a3;
+            padding: 3px 10px;
+        }
     }
 
     img {
@@ -178,9 +186,15 @@ ol {
         margin: 0 auto;
     }
 
+    .subscribe-link-apple img,
+    .subscribe-link-radiopublic img {
+        height: 34px;
+    }
+
     // the only non-image subscribe link needs extra styling
     .rss-badge {
         display: inline-block;
+        line-height: 1.3;
 
         &:before {
             @include background-size(15px 15px);
@@ -190,7 +204,7 @@ ol {
             display: block;
             float: left;
             height: 20px;
-            margin: 6px 10px 0 0;
+            margin: 4px 8px 0 0;
             width: 15px;
         }
     }
@@ -226,7 +240,7 @@ ol {
             justify-content: space-between;
             
             li {
-                margin-bottom: 0;
+                margin: 0;
             }
         }
     }
