[fix bug 1434383] Add newsletter to home page.

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -46,6 +46,10 @@ body_id:    home
 </section>
 {% endif %}
 
+<div class="content">
+    {% include newsletter.html %}
+</div>
+
 <section id="more">
     <div class="content">
         <h3>More on the IRL Podcast</h3>
