--- a/_includes/subscribe-links.html
+++ b/_includes/subscribe-links.html
@@ -10,7 +10,7 @@
         <a href="https://geo.itunes.apple.com/podcast/us/id1247652431?mt=2&amp;at=1010lbVy&amp;ct=mozilla_{{ include.itunes_tracking }}" rel="external" data-service="iTunes" class="subscribe-link-apple"><img src="{{ "/assets/images/subscribe-badge-apple.svg" | relative_url }}" alt="Subscribe on Apple Podcasts"></a>
     </li>
     <li>
-        <a href="https://open.spotify.com/show/0vT7LJMeVDxyQ2ZamHKu08" rel="external" data-service="Spotify" class="subscribe-link-spotify"><span><img src="{{ "/assets/images/subscribe-badge-spotify.svg" | relative_url }}" alt="Subscribe on Spotify"></span></a>
+        <a href="https://open.spotify.com/show/0vT7LJMeVDxyQ2ZamHKu08" rel="external" data-service="Spotify" class="subscribe-link-spotify"><img src="{{ "/assets/images/subscribe-badge-spotify.svg" | relative_url }}" alt="Subscribe on Spotify"></a>
     </li>
     <li>
         <a href="https://play.radiopublic.com/irl-online-life-is-real-life-6Bv5Op?utm_source=Mozilla&amp;utm_medium=irl-website&amp;utm_campaign={{ include.rp_campaign | default: "header-badge" }}" rel="external" data-service="Radio Public" class="subscribe-link-radiopublic"><img src="{{ "/assets/images/subscribe-badge-radiopublic.svg" | relative_url }}" alt="Subscribe on RadioPublic"></a>
