--- a/docs/assets/main.css
+++ b/docs/assets/main.css
@@ -569,62 +569,62 @@ ol {
       visibility: visible;
       width: 100%; }
 
-#intro-content-inner {
-  padding: 0 20px;
-  width: auto; }
-  @media screen and (min-width: 760px) {
-    #intro-content-inner {
-      margin: 0 auto;
-      width: 700px; } }
-  @media screen and (min-width: 1000px) {
-    #intro-content-inner {
-      width: 820px; } }
-
 #site-logo {
   margin-bottom: 20px; }
   #site-logo img {
     display: block; }
 
 #intro-main {
-  padding-bottom: 0; }
+  padding: 0 20px;
+  width: auto; }
   @media screen and (min-width: 760px) {
     #intro-main {
       display: grid;
       grid-gap: 0 20px;
-      grid-template: repeat(2, auto)/280px auto;
-      grid-template-areas: "logo title" "logo intro"; }
+      grid-template: repeat(3, auto)/280px auto;
+      grid-template-areas: "logo title" "logo intro" "subscribe subscribe";
+      margin: 0 auto;
+      width: 700px; }
       #intro-main #site-logo {
         grid-area: logo;
         margin-bottom: 0; }
       #intro-main #site-title {
         grid-area: title; }
       #intro-main #site-intro {
-        grid-area: intro; } }
+        grid-area: intro; }
+      #intro-main .subscribe-links-wrapper {
+        grid-area: subscribe; } }
+  @media screen and (min-width: 1000px) {
+    #intro-main {
+      grid-template: repeat(3, auto)/280px auto;
+      grid-template-areas: "logo title" "logo intro" "logo subscribe";
+      width: 820px; } }
 
 .subscribe-links li {
   margin-bottom: 10px; }
 .subscribe-links a {
   align-items: center;
-  background: #efefef;
-  border-radius: 10px;
+  background: #fff;
+  border: 1px solid #a2a3a3;
+  border-radius: 8px;
   box-sizing: border-box;
   display: flex;
-  height: 46px;
+  height: 34px;
   justify-content: center;
+  padding: 3px 10px;
   text-align: center;
-  width: 160px; }
-  .subscribe-links a span {
-    background: #fff;
-    border-radius: 8px;
-    border: 1px solid #a2a3a3;
-    padding: 3px 10px; }
+  width: 133px; }
 .subscribe-links img {
   display: block;
   height: 26px;
   margin: 0 auto; }
-.subscribe-links .subscribe-link-apple img,
+.subscribe-links .subscribe-link-apple {
+  border: none;
+  padding: 0; }
+  .subscribe-links .subscribe-link-apple img {
+    height: 34px; }
 .subscribe-links .subscribe-link-radiopublic img {
-  height: 34px; }
+  height: 23px; }
 .subscribe-links .rss-badge {
   display: inline-block;
   line-height: 1.3; }
@@ -639,29 +639,34 @@ ol {
     height: 20px;
     margin: 4px 8px 0 0;
     width: 15px; }
-@media screen and (min-width: 1000px) {
-  .subscribe-links a {
-    width: 180px; } }
 
 .subscribe-links-wrapper {
   margin-top: 20px;
-  max-width: 420px; }
+  max-width: 400px; }
   .subscribe-links-wrapper .subscribe-links {
     display: flex;
     flex-wrap: wrap;
     justify-content: flex-start;
-    margin: 20px 0 0; }
+    margin-top: 20px; }
     .subscribe-links-wrapper .subscribe-links li {
       flex: 0 0 auto;
-      margin: 0 5px 20px; }
+      margin-bottom: 20px; }
+      .subscribe-links-wrapper .subscribe-links li:nth-child(even) {
+        margin-left: 10px; }
   @media screen and (min-width: 760px) {
     .subscribe-links-wrapper {
       max-width: none; }
       .subscribe-links-wrapper .subscribe-links {
         flex-wrap: nowrap;
-        justify-content: space-between; }
+        justify-content: space-between;
+        margin-top: 0; }
         .subscribe-links-wrapper .subscribe-links li {
-          margin: 0; } }
+          margin-bottom: 0; } }
+  @media screen and (min-width: 1000px) {
+    .subscribe-links-wrapper .subscribe-links li {
+      margin-left: 10px; }
+      .subscribe-links-wrapper .subscribe-links li:first-child {
+        margin-left: 0; } }
 
 #episodes .content {
   padding-top: 0; }
@@ -698,11 +703,24 @@ ol {
       justify-content: flex-end;
       margin-bottom: 0; }
     .episode .episode-player {
+      align-items: center;
+      display: flex;
       grid-area: player; }
     .episode .subscribe-links-wrapper {
       grid-area: subscribe; }
     .episode .episode-description {
       grid-area: description; } }
+@media screen and (min-width: 1000px) {
+  .episode {
+    grid-template-areas: "logo title share" "logo player player" "logo subscribe subscribe" "description description description"; }
+    .episode .subscribe-links-wrapper {
+      display: flex;
+      flex-wrap: nowrap;
+      flex-direction: column;
+      justify-content: flex-end;
+      margin-top: 0; }
+    .episode .subscribe-links {
+      margin-bottom: 0; } }
 
 #episode-list .episode-image {
   display: none; }
@@ -808,6 +826,9 @@ ol {
 @media screen and (min-width: 760px) {
   .js #episode-list .episode-player {
     display: block; } }
+@media screen and (min-width: 1000px) {
+  .js .episode-player {
+    display: flex; } }
 
 .social-share-links li {
   -webkit-box-sizing: border-box;
