--- a/_includes/episode-module.html
+++ b/_includes/episode-module.html
@@ -7,7 +7,15 @@
 {% assign rp_campaign = episode.number | prepend: "episode" | append: "-modal" %}
 
 <article class="episode" id="episode-{{ episode.number }}">
-    <img src="{{ image_path | relative_url }}" srcset="{{ image_path_high_res | relative_url }} 2x" class="episode-image" alt="">
+    <div class="episode-image">
+    {% if include.view != "episode" %}
+        <a href="{{ episode.url }}">
+    {% endif %}
+        <img src="{{ image_path | relative_url }}" srcset="{{ image_path_high_res | relative_url }} 2x" alt="">
+    {% if include.view != "episode" %}
+        </a>
+    {% endif %}
+    </div>
 
 {% if include.view == "episode" %}
     <div class="episode-title-wrapper">
@@ -38,7 +46,7 @@
     </ul>
 
     <div class="episode-player">
-        <iframe src="{{ episode.embed }}?style=light" seamless="" scrolling="no" width="100%" height="36px" frameborder="0"></iframe>
+        <iframe frameborder="0" height="200px" scrolling="no" seamless src="https://embed.simplecast.com/{{ episode.embed }}?color=f5f5f5" width="100%"></iframe>
     </div>
 
 {% if include.view == 'episode' %}
