--- a/_sass/irlpodcast.scss
+++ b/_sass/irlpodcast.scss
@@ -240,21 +240,15 @@ ol {
 
         .subscribe-links {
             flex-wrap: nowrap;
-            justify-content: space-between;
             margin-top: 0;
 
             li {
                 margin-bottom: 0;
-            }
-        }
-    }
+                margin-right: 20px;
 
-    @media #{$mq-desktop} {
-        .subscribe-links li {
-            margin-left: 10px;
-            
-            &:first-child {
-                margin-left: 0;
+                &:nth-child(even) {
+                    margin-left: 0;
+                }
             }
         }
     }
@@ -270,8 +264,7 @@ ol {
 
 .episode-list-item {
     border-bottom: 1px solid #000;
-    padding: 20px;
-    padding: 1.5em 20px 0.25em;
+    padding: 1.5em 0 0.25em;
 }
 
 .episode {
@@ -286,8 +279,7 @@ ol {
     @media #{$mq-tablet} {
         display: grid;
         grid-gap: 0 20px; // gap between art & episode info
-        grid-template: auto 40px auto auto / 260px auto;
-        grid-template: repeat(4, auto) / 260px auto;
+        grid-template: repeat(4, auto) / 260px 140px auto;
         grid-template-areas: "logo title share"
                              "logo player player"
                              "subscribe subscribe subscribe"
@@ -314,6 +306,7 @@ ol {
             align-items: center;
             display: flex;
             grid-area: player;
+            margin-top: 20px;
         }
 
         .subscribe-links-wrapper {
@@ -322,25 +315,6 @@ ol {
 
         .episode-description {
             grid-area: description;
-        }
-    }
-
-    @media #{$mq-desktop} {
-        grid-template-areas: "logo title share"
-                             "logo player player"
-                             "logo subscribe subscribe"
-                             "description description description";
-
-        .subscribe-links-wrapper {
-            display: flex;
-            flex-wrap: nowrap;
-            flex-direction: column;
-            justify-content: flex-end;
-            margin-top: 0;
-        }
-
-        .subscribe-links {
-            margin-bottom: 0;
         }
     }
 }
@@ -352,10 +326,6 @@ ol {
 
         @media #{$mq-tablet} {
             display: block;
-            align-self: start;
-            height: 180px;
-            justify-self: end;
-            width: 180px;
         }
     }
 
@@ -411,44 +381,41 @@ ol {
             display: flex;
             justify-content: space-between;
         }
-    }
 
-    .episode-player {
-        display: none;
-    }
-
-    .episode-description {
-        // do not display description for mobile on home page
-        display: none;
-
-        @media #{$mq-tablet} {
-            display: block;
-            padding-left: 80px; // line up with right-aligned image
+        @media #{$mq-desktop} {
+            justify-content: space-between;
         }
     }
 
     @media #{$mq-tablet} {
         .episode {
+            grid-template: repeat(4, auto) / 260px auto;
             grid-template-areas: "logo title"
-                                 "logo links"
+                                 "logo share"
                                  "logo player"
                                  "description description";
+        }
+    }
 
-            .episode-links {
-                grid-area: links;
-            }
+    @media #{$mq-desktop} {
+        .episode {
+            grid-template: repeat(3, auto) / 260px 140px auto;
+            grid-template-areas: "logo title share"
+                                 "logo player player"
+                                 "description description description";
         }
     }
 }
 
+// episode title is included in the embedded player, so no need to actually display
+// kept in markup for a11y
 .episode-title {
-    @include font-size-level3();
+    @include visually-hidden();
 }
 
 .episode-links {
     display: flex;
-    justify-content: space-between;
-    max-width: 260px;
+    justify-content: flex-start;
 
     a:before {
         background-position: left bottom;
@@ -491,7 +458,10 @@ ol {
     }
 
     .episode-player {
+        background: #f5f5f5;
+        border-radius: 4px;
         display: block;
+        height: 200px;
     }
 
     @media #{$mq-tablet} {
