--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -62,6 +62,7 @@
     <script src="/js/{{ index .Site.Data.js.hash "jquery.3.2.1.min.js" }}"></script>
     <script src="/js/{{ index .Site.Data.js.hash "clipboard.min.js" }}"></script>
     <script src="/js/{{ index .Site.Data.js.hash "mozilla.modal-min.js" }}"></script>
+    <script src="/js/{{ index .Site.Data.js.hash "mozilla.lazy-load-min.js" }}"></script>
     <script src="/js/{{ index .Site.Data.js.hash "newsletter-min.js" }}"></script>
     <script src="/js/{{ index .Site.Data.js.hash "main-min.js" }}"></script>
 
