--- a/layouts/partials/episode-module.html
+++ b/layouts/partials/episode-module.html
@@ -33,7 +33,10 @@
 
     <div class="episode-player">
         <div class="episode-player-wrapper">
-            <iframe frameborder="0" height="200px" scrolling="no" seamless src="https://embed.simplecast.com/{{ .Params.embed }}?color=f5f5f5" width="100%"></iframe>
+            <iframe class="lazy-load" frameborder="0" height="200px" scrolling="no" seamless src="" data-src="https://embed.simplecast.com/{{ .Params.embed }}?color=f5f5f5" width="100%"></iframe>
+            <noscript>
+                <iframe frameborder="0" height="200px" scrolling="no" seamless src="https://embed.simplecast.com/{{ .Params.embed }}?color=f5f5f5" width="100%"></iframe>
+            </noscript>
         </div>
     </div>
 
