--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -36,6 +36,7 @@
     <meta name="apple-itunes-app" content="app-id=1247652431, affiliate-data=at=1010lbVy&amp;ct=mozilla_smart_banner">
 
     <link rel="stylesheet" href="/css/{{ index .Site.Data.css.hash "irlpodcast.css" }}" />
+    <link rel="stylesheet" href="/css/{{ index .Site.Data.css.hash "survey.css" }}" />
     <link rel="alternate" type="application/rss+xml" title="{{ htmlEscape .Site.Title }}" href="https://feeds.mozilla-podcasts.org/irl">
     <link rel="canonical" href="{{ .Permalink }}">
 
@@ -52,16 +53,23 @@
 
     <main class="page-content" aria-label="Content">
     {{ block "main" . }}
-      <!-- The part of the page that begins to differ between templates -->
     {{ end }}
     </main>
 
     {{ partial "footer.html" }}
+
+    {{ partial "survey.html" }}
 
     <script src="/js/{{ index .Site.Data.js.hash "jquery.3.2.1.min.js" }}"></script>
     <script src="/js/{{ index .Site.Data.js.hash "clipboard.min.js" }}"></script>
     <script src="/js/{{ index .Site.Data.js.hash "mozilla.modal-min.js" }}"></script>
     <script src="/js/{{ index .Site.Data.js.hash "newsletter-min.js" }}"></script>
     <script src="/js/{{ index .Site.Data.js.hash "main-min.js" }}"></script>
+
+    {{/*
+        survey related JS
+    */}}
+    <script src="/js/{{ index .Site.Data.js.hash "mozilla.cookies-min.js" }}"></script>
+    <script src="/js/{{ index .Site.Data.js.hash "survey-min.js" }}"></script>
 </body>
 </html>
